# rust_market

./: .dockerignore  .env  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  README_esp.md  current.md  diesel.toml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  technical.md  tests.md  to_do.md
.github/workflows/: ci.yml
documentation/: 25102024.md  core.md
documentation/diagrams/: order_processing_workflow.md  stock_updates_workflow.md  system_architecture.md
frontend/: .eslintrc.js  package-lock.json  package.json  plan.md  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
migrations/2024-10-25-171428_create_market_tables/: up.sql
migrations/2024-11-17-004412_create_mining_marketplace_tables/: down.sql  up.sql
migrations/TIMESTAMP_create_assets/: down.sql  up.sql
migrations/[timestamp]_create_initial_tables/: up.sql
scripts/: cleanup_test_db.sh  run_test_ci.sh  run_test_local.sh  run_tests.sh  run_tests_local.sh  setup_and_test.sh  setup_test_db.sh  view_logs.sh
src/: db.rs  errors.rs  handlers.rs  lib.rs  logging.rs  main.rs  migrations.rs  models.rs  schema.rs  test_helpers.rs  test_logging.rs
src/common/: mod.rs  test_logging.rs
src/db/: mod.rs  users.rs
src/handlers/: mod.rs
tests/: db_tests.rs  errors_tests.rs  handlers_tests.rs  limit_tests.rs  mod.rs  models_tests.rs  performance_tests.rs  test_config.rs  test_logging.rs  usage.md  user_tests.rs
tests/common/: mod.rs
tests/logs/: 20241116_072441_test_metrics_0.json  (+3 more)
(+7 files in other folders)
