[package]
name = "rust_market"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "numeric"] }
dotenv = "0.15.0"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
bigdecimal = { version = "0.3", features = ["serde"] }
derive_more = "0.99"
thiserror = "1.0"
flexi_logger = "0.22"
