[package]
name = "rust_market"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
diesel = { version = "2.1.4", features = ["postgres", "numeric", "r2d2", "chrono", "serde_json"] }
bigdecimal = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
derive_more = "0.99"
thiserror = "1.0"
flexi_logger = { version = "0.25", features = ["async"] }
uuid = { version = "1.4", features = ["v4"] }
time = "0.3"

[dev-dependencies]
dotenv = "0.15.0"
temp-env = "0.3.6"
